--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/gravatar": "1.8.1",
     "@types/react": "17.0.5",
     "@types/react-dom": "17.0.3",
+    "autosize": "4.0.3",
     "axios": "0.21.1",
     "cross-env": "7.0.3",
     "css": "3.0.0",
@@ -40,16 +41,23 @@
     "@babel/preset-env": "7.14.1",
     "@babel/preset-react": "7.13.13",
     "@babel/preset-typescript": "7.13.0",
+    "@types/autosize": "3.0.7",
     "@types/loadable__component": "5.13.3",
     "@types/node": "15.0.2",
     "@types/react-router": "5.1.14",
     "@types/react-router-dom": "5.1.7",
     "@types/webpack": "5.28.0",
     "@types/webpack-dev-server": "3.11.3",
+    "@typescript-eslint/parser": "4.23.0",
     "babel-loader": "8.2.2",
     "eslint": "7.25.0",
     "eslint-config-prettier": "8.3.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "^5.3.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "3.4.0",
+    "eslint-plugin-react": "^7.22.0",
     "prettier": "2.2.1",
     "webpack": "5.36.2",
     "webpack-cli": "4.7.0",
