--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gravatar": "1.8.1",
     "react": "17.0.2",
     "react-custom-scrollbars": "4.2.1",
+    "react-custom-scrollbars-2": "4.4.0",
     "react-dom": "17.0.2",
     "react-mentions": "4.1.1",
     "react-refresh": "0.10.0",
