--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/babel-plugin": "11.3.0",
     "@emotion/react": "11.4.0",
     "@emotion/styled": "11.3.0",
+    "@jjordy/swr-devtools": "^1.0.4",
     "@loadable/component": "5.14.1",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@types/gravatar": "1.8.1",
